src/objects/Entitlement_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entitlement Contacts</relationshipLabel>
        <relationshipName>Entitlement_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Entitlement Contacts</relationshipLabel>
        <relationshipName>Entitlement_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Silent Observer</fullName>
                    <default>true</default>
                    <label>Silent Observer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Email_Address__c</fullName>
        <description>In order to avoid duplicate entitlement Contact creation.</description>
        <externalId>true</externalId>
        <label>Unique Email Address</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Entitlement Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Entitlement Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>